// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Header Movie NoIsAuth 1`] = `
Array [
  "",
  "",
  <div
    className="user-block"
  >
    <a
      className="user-block__link"
      href="/login"
      onClick={[Function]}
    >
      Sign in
    </a>
  </div>,
]
`;

exports[`Render Header Movie isAuth 1`] = `
Array [
  "",
  "",
  <div
    className="user-block"
  >
    <div
      className="user-block__avatar"
    >
      <a
        href="/mylist"
        onClick={[Function]}
      >
        <img
          alt="User avatar"
          height="63"
          src="/img/avatar.jpg"
          width="63"
        />
      </a>
    </div>
  </div>,
]
`;

exports[`Render Header Sign In Auth 1`] = `
Array [
  "",
  "",
  <div
    className="user-block"
  >
    <div
      className="user-block__avatar"
    >
      <a
        href="/mylist"
        onClick={[Function]}
      >
        <img
          alt="User avatar"
          height="63"
          src="/img/avatar.jpg"
          width="63"
        />
      </a>
    </div>
  </div>,
]
`;

exports[`Render Header Sign In NoIsAuth 1`] = `
Array [
  "",
  "",
  <div
    className="user-block"
  >
    <a
      className="user-block__link"
      href="/login"
      onClick={[Function]}
    >
      Sign in
    </a>
  </div>,
]
`;

exports[`Render Header Sign In WithTitle Auth 1`] = `
Array [
  "",
  <h1
    className="page-title user-page__title"
  >
    Page Name
  </h1>,
  <div
    className="user-block"
  >
    <div
      className="user-block__avatar"
    >
      <a
        href="/mylist"
        onClick={[Function]}
      >
        <img
          alt="User avatar"
          height="63"
          src="/img/avatar.jpg"
          width="63"
        />
      </a>
    </div>
  </div>,
]
`;
